--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "classnames": "^2.3.1",
     "npm": "^8.13.1",
     "npm-upgrade": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "typescript": "^4.7.4",
