--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "npm": "^8.13.1",
     "npm-upgrade": "^0.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "react-spinners": "^0.13.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
